maj arbitre